[package]
name = "audio-multiplexer"
version = "2.0.0"
edition = "2021"
description = "Multi-device audio multiplexer - AirPlay receiver that distributes audio to Sonos, Teufel/DLNA, and AirPlay speakers"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
mdns-sd = "0.12"
ssdp-client = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
if-addrs = "0.13"
bytes = "1"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
serial_test = "3"
